--- a/config/west.yml
+++ b/config/west.yml
@@ -1,13 +1,11 @@
 manifest:
   remotes:
     - name: zmkfirmware
-      url-base: https://github.com/zmkfirmware
-    # Additional modules containing boards/shields/custom code can be listed here as well
-    # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
+      url-base: https://github.com/urob/
   projects:
     - name: zmk
       remote: zmkfirmware
-      revision: main
+      revision: mouse-3.2
       import: app/west.yml
   self:
     path: config
