--- a/boards/shields/henki/henki.conf
+++ b/boards/shields/henki/henki.conf
@@ -1,3 +1,10 @@
 CONFIG_ZMK_SLEEP=n
 CONFIG_ZMK_MOUSE=y
 CONFIG_ZMK_POINTING=y
+
+# Enable the USB HID device stack and ZMK event manager for mouse emulation
+CONFIG_USB_DEVICE_STACK=y
+CONFIG_USB_DEVICE_HID=y
+CONFIG_USB_HID_DEVICE=y
+CONFIG_ZMK_USB_HID_DEVICE=y
+CONFIG_ZMK_EVENT_MANAGER=y
